build/log/idf_py_stderr_output_16790
In file included from /home/noctis/Progra/ci_comunication/main/ci_comunication.c:7:
/home/noctis/Progra/ci_comunication/main/ci_comunication.c: In function 'init_wifi':
/home/noctis/esp/esp-idf/components/esp_wifi/include/esp_wifi.h:300:36: error: expected expression before '{' token
  300 | #define WIFI_INIT_CONFIG_DEFAULT() { \
      |                                    ^
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:25:23: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   25 |         wifi_config = WIFI_INIT_CONFIG_DEFAULT();
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~
/home/noctis/Progra/ci_comunication/main/ci_comunication.c: In function 'init_now':
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:48:1: error: expected ';' before '}' token
   48 | };
      | ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/ci_comunication.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
